force-app/main/default/objects/Purchase_Requisition_Line__c/Purchase_Requisition_Line__c.object-meta.xml
<CustomObject>
    <label>Purchase Requisition Line</label>
    <nameField>
        <displayFormat>PRL-{000000}</displayFormat>
        <label>Purchase Requisition Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requisition Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>