force-app/main/default/objects/Purchase_Requisition_Line__c/fields/Estimated_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Unit_Price__c</fullName>
    <label>Estimated Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>