force-app/main/default/objects/Purchase_Requisition_Line__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Material__c.Material_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Material__c</referenceTo>
    <relationshipLabel>Purchase Requisition Lines</relationshipLabel>
    <relationshipName>Purchase_Requisition_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>