force-app/main/default/objects/Purchase_Requisition_Line__c/fields/Material_Display__c.field-meta.xml
<CustomField>
    <fullName>Material_Display__c</fullName>
    <formula>IF(
ISBLANK(Material__c),
Item_Name__c,
Material__r.Material_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Display</label>
    <type>Text</type>
</CustomField>